[gd_scene load_steps=4 format=2]

[ext_resource path="res://Oven.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/Interiors_32x32.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Oven" type="Area2D" groups=[
"fridge",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EmptyOven" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 292, 14200, 56, 58 )
region_filter_clip = true

[node name="FilledOven" type="Sprite" parent="."]
position = Vector2( -3.648, -3.92862 )
scale = Vector2( 0.762089, 0.712534 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 394, 14252, 42, 8 )
region_filter_clip = true

[node name="FinishedOven" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 292, 14144, 56, 32 )
region_filter_clip = true

[node name="OvenTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="OvenTimer" to="." method="_on_OvenTimer_timeout"]
